docs/chint/Rust/src/txt
error[E0369]: binary operation `!=` cannot be applied to type `std::sync::MutexGuard<'_, std::string::String>`
   --> src\main.rs:420:41
    |
420 |     if guard.model_type.lock().unwrap() != "MN" {
    |        -------------------------------- ^^ ---- &str
    |        |
    |        std::sync::MutexGuard<'_, std::string::String>
    |
note: `std::sync::MutexGuard<'_, std::string::String>` does not implement `PartialEq<&str>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\std\src\sync\poison\mutex.rs:277:0
    |
    = note: `std::sync::MutexGuard<'_, std::string::String>` is defined in another crate

warning: unused variable: `data`
   --> src\main.rs:429:28
    |
429 | async fn set_undervoltage2(data: web::Data<Mutex<AppState>>, _q: web::Query<RegValue>) -> impl Responder {
    |                            ^^^^ help: if this is intentional, prefix it with an underscore: `_data`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `data`
   --> src\main.rs:432:27
    |
432 | async fn set_overvoltage1(data: web::Data<Mutex<AppState>>, _q: web::Query<RegValue>) -> impl Responder {
    |                           ^^^^ help: if this is intentional, prefix it with an underscore: `_data`

warning: unused variable: `data`
   --> src\main.rs:435:27
    |
435 | async fn set_overvoltage2(data: web::Data<Mutex<AppState>>, _q: web::Query<RegValue>) -> impl Responder {
    |                           ^^^^ help: if this is intentional, prefix it with an underscore: `_data`

For more information about this error, try `rustc --explain E0369`.
warning: `chint_ats` (bin "chint_ats") generated 3 warnings
error: could not compile `chint_ats` (bin "chint_ats") due to 1 previous error; 3 warnings emitted
